// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tester/Heading Defaults smoke-test 1`] = `
<div data-test-block="true">
  <h2 class="Heading_heading__ZSmfg Heading_heading_level1__23wfQ  ">
    Heading level 1
  </h2>
  <h2 class="Heading_heading__ZSmfg Heading_heading_level2__Q-AHg  ">
    Heading level 2
  </h2>
  <h2 class="Heading_heading__ZSmfg Heading_heading_level3__3dS_T  ">
    Heading level 3
  </h2>
  <h2 class="Heading_heading__ZSmfg Heading_heading_level4__2aQVQ  ">
    Heading level 4
  </h2>
  <h2 class="Heading_heading__ZSmfg Heading_heading_level5__2JeRa  ">
    Heading level 5
  </h2>
</div>
`;

exports[`Tester/Heading DefaultsMobile smoke-test 1`] = `
<div data-test-block="true">
  <h2 class="Heading_heading__ZSmfg Heading_heading_level1__23wfQ  ">
    Heading level 1
  </h2>
  <h2 class="Heading_heading__ZSmfg Heading_heading_level2__Q-AHg  ">
    Heading level 2
  </h2>
  <h2 class="Heading_heading__ZSmfg Heading_heading_level3__3dS_T  ">
    Heading level 3
  </h2>
  <h2 class="Heading_heading__ZSmfg Heading_heading_level4__2aQVQ  ">
    Heading level 4
  </h2>
  <h2 class="Heading_heading__ZSmfg Heading_heading_level5__2JeRa  ">
    Heading level 5
  </h2>
</div>
`;

exports[`Tester/Heading LevelsWithSpacing smoke-test 1`] = `
<div data-test-block="true">
  <h2 class="Heading_heading__ZSmfg Heading_heading_level1__23wfQ Heading_heading_hasSpacingMedium__muSy7 ">
    Heading level 1
  </h2>
  <h2 class="Heading_heading__ZSmfg Heading_heading_level2__Q-AHg Heading_heading_hasSpacingSmallMobileMediumOtherwise__3rvxM ">
    Heading level 2
  </h2>
  <h2 class="Heading_heading__ZSmfg Heading_heading_level3__3dS_T Heading_heading_hasSpacingSmall__2kGmB ">
    Heading level 3
  </h2>
  <h2 class="Heading_heading__ZSmfg Heading_heading_level4__2aQVQ Heading_heading_hasSpacingSmall__2kGmB ">
    Heading level 4
  </h2>
  <h2 class="Heading_heading__ZSmfg Heading_heading_level5__2JeRa Heading_heading_hasSpacingExtraSmall__3JWk5 ">
    Heading level 5
  </h2>
</div>
`;

exports[`Tester/Heading LevelsWithSpacingMobile smoke-test 1`] = `
<div data-test-block="true">
  <h2 class="Heading_heading__ZSmfg Heading_heading_level1__23wfQ Heading_heading_hasSpacingMedium__muSy7 ">
    Heading level 1
  </h2>
  <h2 class="Heading_heading__ZSmfg Heading_heading_level2__Q-AHg Heading_heading_hasSpacingSmallMobileMediumOtherwise__3rvxM ">
    Heading level 2
  </h2>
  <h2 class="Heading_heading__ZSmfg Heading_heading_level3__3dS_T Heading_heading_hasSpacingSmall__2kGmB ">
    Heading level 3
  </h2>
  <h2 class="Heading_heading__ZSmfg Heading_heading_level4__2aQVQ Heading_heading_hasSpacingSmall__2kGmB ">
    Heading level 4
  </h2>
  <h2 class="Heading_heading__ZSmfg Heading_heading_level5__2JeRa Heading_heading_hasSpacingExtraSmall__3JWk5 ">
    Heading level 5
  </h2>
</div>
`;

exports[`Tester/Heading WithCustomCss smoke-test 1`] = `
<div data-test-block="true">
  <h2 class="Heading_heading__ZSmfg Heading_heading_level2__Q-AHg  dummyClassname">
    Dette er en heading
  </h2>
</div>
`;

exports[`Tester/Heading WithDataTestid smoke-test 1`] = `
<div data-test-block="true">
  <h2 class="Heading_heading__ZSmfg Heading_heading_level2__Q-AHg  "
      data-testid="HeadingID"
  >
    Dette er en heading
  </h2>
</div>
`;

exports[`Tester/Heading WithId smoke-test 1`] = `
<div data-test-block="true">
  <h2 id="headingId"
      class="Heading_heading__ZSmfg Heading_heading_level2__Q-AHg  "
  >
    Dette er en heading
  </h2>
</div>
`;

exports[`Tester/Heading WithLang smoke-test 1`] = `
<div data-test-block="true">
  <h2 class="Heading_heading__ZSmfg Heading_heading_level2__Q-AHg  "
      lang="nb"
  >
    Dette er en heading
  </h2>
</div>
`;

exports[`Tester/Heading WithMarkup smoke-test 1`] = `
<div data-test-block="true">
  <h2 class="Heading_heading__ZSmfg Heading_heading_level2__Q-AHg Heading_heading_hasSpacingSmallMobileMediumOtherwise__3rvxM ">
    Dette er den
    <a href="https://skatteetaten.no">
      fyneste markup headingen
    </a>
    <em>
      som finnes i italic
    </em>
    <strong>
      og strong
    </strong>
    <mark>
      mark
    </mark>
    <code>
      code
    </code>
    med spacing under og en skrivefeil
  </h2>
  <h2 class="Heading_heading__ZSmfg Heading_heading_level2__Q-AHg  ">
    Dette er den fineste string headingen uten markup
  </h2>
</div>
`;

exports[`Tester/Heading WithRef smoke-test 1`] = `
<div data-test-block="true">
  <h2 class="Heading_heading__ZSmfg Heading_heading_level2__Q-AHg  "
      id="dummyIdForwardedFromRef"
  >
    Dette er en heading
  </h2>
</div>
`;
